--- a/PorterAndMoon/ClientApp/public/index.html
+++ b/PorterAndMoon/ClientApp/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
     <base href="%PUBLIC_URL%/" />
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -21,7 +22,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>PorterAndMoon</title>
-    <script src="https://use.fontawesome.com/b7b354b58d.js"></script>
   </head>
   <body>
     <noscript>
